--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -1,5 +1,8 @@
 # chart2csv.kikuai.dev - Chart2CSV API
+# Сохранить в /etc/nginx/sites-available/chart2csv.kikuai.dev
+# Создать симлинк: ln -s /etc/nginx/sites-available/chart2csv.kikuai.dev /etc/nginx/sites-enabled/
 
+# HTTP -> HTTPS redirect
 server {
     listen 80;
     server_name chart2csv.kikuai.dev;
@@ -9,29 +12,38 @@ server {
     }
     
     location / {
-        return 301 https://$host$request_uri;
+        return 301 https://$server_name$request_uri;
     }
 }
 
+# HTTPS
 server {
     listen 443 ssl http2;
     server_name chart2csv.kikuai.dev;
-    
+
+    # SSL сертификаты (Let's Encrypt)
     ssl_certificate /etc/letsencrypt/live/chart2csv.kikuai.dev/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/chart2csv.kikuai.dev/privkey.pem;
     
+    # SSL настройки
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
-    ssl_prefer_server_ciphers off;
-    
+    ssl_ciphers HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "no-referrer-when-downgrade" always;
+
+    # Логи
+    access_log /var/log/nginx/chart2csv.access.log;
+    error_log /var/log/nginx/chart2csv.error.log;
     
     # Max upload size for chart images
     client_max_body_size 10M;
-    
+
+    # Proxy на внутренний порт
     location / {
         proxy_pass http://127.0.0.1:8010;
         proxy_http_version 1.1;
@@ -42,6 +54,16 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
+        
+        # Timeouts for chart processing
+        proxy_connect_timeout 120s;
+        proxy_send_timeout 120s;
         proxy_read_timeout 120s;
+    }
+
+    # Health check endpoint
+    location /health {
+        proxy_pass http://127.0.0.1:8010/health;
+        access_log off;
     }
 }
